Added conneection string to db

--- a/EarlyLearningHub/EarlyLearningHub/appsettings.json
+++ b/EarlyLearningHub/EarlyLearningHub/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EarlyLearningHubContext": "Server=198.237.190.87;Database=EarlyLearningHub;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  }
 }
